Implement chat app hardening updates